--- a/templates/home.html.jinja
+++ b/templates/home.html.jinja
@@ -15,7 +15,7 @@
             
         </nav>
         <main>
-            <a href={{ url_for('new_post', name=user)}}><img src={{ url_for('static', filename="post.png")}} id="new_post"></a>
+            <a href={{ url_for('new_post', id=id)}}><img src={{ url_for('static', filename="post.png")}} id="new_post"></a>
             <br>
             <hr>
             <section id="post_container">
