--- a/templates/new_post.html.jinja
+++ b/templates/new_post.html.jinja
@@ -20,7 +20,7 @@
                 <button type="submit">Send</button>
                 <br>
             </form>
-            <a href={{ url_for('home', name=user)}}><button>Back</button></a>
+            <a href={{ url_for('home', id=id)}}><button>Back</button></a>
         </nav>
     </body>
 </html>
