--- a/templates/login.html.jinja
+++ b/templates/login.html.jinja
@@ -2,28 +2,27 @@
 <html lang="en">
     <head>
         <title>Debate99</title>
-        <link rel="stylesheet" href={{ url_for('static', filename="styles.css") }}>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Jaro:opsz@6..72&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href={{ url_for('static', filename="./CSS/styles_login.css") }}>
     </head>
     <body>
         <header>
-            <h1>Debate99</h1>
+            <h1 id="Titolo">Debate99</h1>
         </header>
-        <div id="login">
+        <div class="login">
             <form action="/login" target="_self" method="post">
-                <h2>Login</h2>
-                <hr>
-                <p>Username</p>
+                <h2>Username</h2>
                 <input id="name" name="name" type="text">
-                <p>Password</p>
+                <h2>Password</h2>
                 <input id="password" name="password" type="password">
                 <br><br>
                 <input id="send" type="submit">
             </form>
-            <hr>
-            <h3>Don't Have An Account Register Now!</h3>
-            <form action="/register" target="_self">
-                <button type="submit">Register</button>
-            </form>
+            <br>
+            <a href="/register" id="register">Do not have an account?</a>
         </div>
         </body>
 </html>
