--- a/templates/register.html.jinja
+++ b/templates/register.html.jinja
@@ -6,7 +6,7 @@
     </head>
     <body>
         <header>
-            <h1>Debate99t</h1>
+            <h1>Debate99</h1>
         </header>
         <div id="login">
             <form action="/registered" method="post" target="_self" enctype="multipart/form-data">
