--- a/templates/login.html.jinja
+++ b/templates/login.html.jinja
@@ -13,16 +13,16 @@
             <h1 id="Titolo">Debate99</h1>
         </header>
         <div class="login">
-            <form action="/login" target="_self" method="post">
+            <form action="/login" target="_self" method="post" class="form">
                 <h2>Username</h2>
                 <input id="name" name="name" type="text">
                 <h2>Password</h2>
                 <input id="password" name="password" type="password">
                 <br><br>
                 <input id="send" type="submit">
+                <br>
+                <a href="/register" id="register">Do not have an account?</a>
             </form>
-            <br>
-            <a href="/register" id="register">Do not have an account?</a>
         </div>
         </body>
 </html>
