--- a/templates/home.html.jinja
+++ b/templates/home.html.jinja
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <title>Debate99</title>
-        <link rel="stylesheet" href={{ url_for('static', filename="styles.css") }}
+        <link rel="stylesheet" href={{ url_for('static', filename="./static/CSS/homepage_styles.css") }}
     </head>
     <body>
         <header>
