--- a/templates/home.html.jinja
+++ b/templates/home.html.jinja
@@ -2,11 +2,11 @@
 <html lang="en">
     <head>
         <title>Debate99</title>
-        <link rel="stylesheet" href={{ url_for('static', filename="./static/CSS/homepage_styles.css") }}
+        <link rel="stylesheet" href={{ url_for('static', filename="CSS/homepage_styles.css") }}
     </head>
     <body>
         <header>
-            <h1>Debate99</h1>
+            <h1 id="Titolo">Debate99</h1>
             <img src={{ url_for('static', filename="Sunshine.gif")}} id="logo">
         </header>
         <nav>
