--- a/static/CSS/homepage_styles.css
+++ b/static/CSS/homepage_styles.css
@@ -2,21 +2,34 @@ body {
 	background-color: #1e1e1e;
 }
 
-.header {
+header {
 	display: flex;
 	justify-content: center;
 }
 
-.header #Titolo {
+header #Titolo {
 	font-size: 40px;
 	font-family: "Jaro", sans-serif;
 	color: #ffffff;
 }
 
-.home{
-	position: absolute;
-	top: 50%;
-	left: 50%;
-	height: 720px;
-	width: 480px;
+header #logo {
+	width: 10%;
+	height: 10%;
 }
+
+.homepage {
+	margin: auto;
+	display: flex;
+	justify-content: center;
+	width: 50%;
+	border-style: solid;
+	border-width: 1px;
+	vertical-align: top;
+}
+
+.homepage img {
+	width: 20px;
+	height: 20px;
+}
+
