--- a/static/CSS/homepage_styles.css
+++ b/static/CSS/homepage_styles.css
@@ -18,18 +18,12 @@ header #logo {
 	height: 10%;
 }
 
-.homepage {
-	margin: auto;
+nav {
 	display: flex;
 	justify-content: center;
-	width: 50%;
-	border-style: solid;
-	border-width: 1px;
-	vertical-align: top;
 }
 
-.homepage img {
-	width: 20px;
-	height: 20px;
+nav img {
+	width: 25%;
+	height: 25%;
 }
-
