--- a/static/CSS/homepage_styles.css
+++ b/static/CSS/homepage_styles.css
@@ -53,6 +53,16 @@ nav img {
 	width: 25%;
 }
 
+nav p img {
+	width: 50px;
+	height: 50px;
+}
+
+hr {
+	width: 80%;
+	max-width: 1150px;
+	color: #444;
+}
 main{
  flex-direction: column;
 }
