--- a/static/CSS/homepage_styles.css
+++ b/static/CSS/homepage_styles.css
@@ -2,6 +2,10 @@ body {
 	background-color: #1e1e1e;
 }
 
+p {
+	color: white;
+}
+
 header {
 	display: flex;
 	justify-content: center;
@@ -36,18 +40,11 @@ nav {
 	display: flex;
 	align-items: center;
 	flex-direction: row;
-	
+	justify-content: space-between;	
+	margin: 5px;
+	padding: 5px;
 }
 
-nav a {
-	display: flex;
-	justify-content: flex-start;
-}
-
-nav #username {
-	display: flex;
-	justify-content: flex-end;
-}
 
 nav img {
 	width: 25%;
@@ -59,7 +56,7 @@ nav p img {
 }
 
 hr {
-	width: 80%;
+	width: 95%;
 	max-width: 1150px;
 	color: #444;
 }
@@ -69,6 +66,8 @@ main{
 
 main img {
 	width: 5%;
+	padding: 5px;
+	margin: 5px;
 }
 
 .post {
